--- a/assessment.html
+++ b/assessment.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>あなたのいいところ診断</title>
+    <title>asako66が作ったあなたのいいところ診断</title>
     <link rel="stylesheet" href="assessment.css">
   </head>
   <body>
